[workspace]
resolver = "2"
members = [
    "mc-network",
    "mc-tick",
    "mc-proc",
    "mc-example",
    "mc-loader",
    "mclib-protocol",
    "mc-status",
    "mc-registry",
    "mc-keepalive",
    "mclib-network",
    "mc-world",
    "mclib-world",
    "mclib-core",
    "mc-player",
]

[workspace.dependencies]
# for some reason it has a 'derive' feature, but disabling it throws an error
# simdnbt = { version = "0.7.1", default-features = false }
simdnbt = "0.7.1"

[profile.release]
# debug = true
