[package]
name = "mc-keepalive"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
init = []

[dependencies]
pluggie = { path = "../../pluggie/pluggie" }
mclib-network = { path = "../mclib-network" }
mc-tick = { path = "../mc-tick" }
mclib-protocol = { path = "../mclib-protocol" }
