[package]
name = "mc-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
init = []

[dependencies]
pluggie = { path = "../../pluggie/pluggie" }
mc-tick = { path = "../mc-tick", default-features = false, features = [] }
mc-network = { path = "../mc-network", default-features = false, features = [] }
mclib-protocol = { path = "../mclib-protocol", default-features = false, features = [
] }
mc-registry = { path = "../mc-registry", default-features = false, features = [
] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4", "v3"] }
simdnbt = "0.7.1"
