[package]
name = "mc-network"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
init = []

[dependencies]
abi_stable = "0.11.3"
pluggie = { path = "../../pluggie/pluggie" }
oneshot = "0.1.11"
mclib-protocol = { path = "../mclib-protocol", features = ["serde"] }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
paste = "1.0.15"
dashmap = "6.1.0"
