[package]
name = "mc-network"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
init = []

[dependencies]
abi_stable = { version = "0.11.3", default-features = false }
pluggie = { path = "../../pluggie/pluggie" }
mclib-protocol = { path = "../mclib-protocol", features = ["serde"] }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
paste = "1.0.15"
dashmap = "6.1.0"
simdnbt.workspace = true
mclib-network = { path = "../mclib-network" }
