[package]
name = "mclib-protocol"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "mc-proc/serde-derive", "uuid/serde"]

[dependencies]
mc-proc = { path = "../mc-proc" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = "0.1.20"
simdnbt.workspace = true
uuid = { version = "1.17.0", features = ["v3", "v4"] }
