[package]
name = "tcp-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
] }
mclib-protocol = { path = "../mclib-protocol", features = ["serde"] }
# mc-loader = { path = "../mc-loader" }
